# CGIP

./: 1-Bresenhams-line.c  10-Blur-Smoothing  11-Contour  12-DetectFace  2-Scaling-2D.c  3-Operations-3D.c  4-Rectangle-Transform.c  5-3DTransform-3DObject.c  6-Animation-Effect.c  7-Quadrants.py  8-Rotate-Scale-Translate  9-Edge-Texture-Filtering  CMakeLists.txt  README.md  main.cpp
